# cookbook

./: .gitignore  .gitmodules  Cargo.toml
algorithms/: Cargo.toml
data/: Cargo.toml
playground/: Cargo.toml
text/: Cargo.toml
