[package]
name = "data"
version = "0.1.0"
authors = ["jmurray <john@gardenway.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.9.0"
fixed-vec-deque = {path = "../ThirdParty/fixed-vec-deque"}


[[bin]]
bench = false
path = "src/bin/unpack.rs"
name = "unpack"

[[bin]]
bench = false
path = "src/bin/list_comprehensions.rs"
name = "list_comprehensions"

[[bin]]
bench = false
path = "src/bin/list2.rs"
name = "list2"


[[bin]]
bench = false
path = "src/bin/cb_1_2.rs"
name = "cb12"

[[bin]]
bench = false
path = "src/bin/cb_1_4.rs"
name = "cb14"